# libXdamage

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  xdamage.pc.in
include/X11/extensions/: Xdamage.h
src/: .gitignore  Makefile.am  Xdamage.c
